# ConfluentFUCCI

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  install-confluentfucci-windows.bat  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yaml  package_artifacts.yaml  publish_cf_image.yaml  publish_images.yaml  publish_trackmate_image.yaml  python-app.yaml
confluentfucci/: __main__.py  gui.py  main.py  math.py  utils.py
containers/confluentfucci/: Dockerfile.cuda  Dockerfile.dev  Dockerfile.prod  docker-compose.yaml  napari.dockerfile
containers/trackmate/: Dockerfile  init_fiji.py  read_settings_and_process_tiff_stack.py
data/3_frames/: green.tif  phase.tif  red.tif
docs/: examples.md  index.md  requirements.txt
docs/notebooks/: walkthrough-1.ipynb
examples/: draw_tracks.py  draw_voronoi.py
tests/resources/: test_segmented_stack.tiff
tests/test_confluentfucci/: __init__.py  test_main.py  test_utils.py
